# insights-rs

./: Cargo.toml  README.md
.github/workflows/: build.yml  publish.yml  release.yml
src/: conversation.rs  emoji.rs  main.rs  message.rs
