[package]
name = "insights"
version = "0.1.0"
authors = ["Umayr Shahid <umayr.shahid@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.1"
lazy_static = "1.4.0"
docopt = "1"
chrono = { version = "0.4.0", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_derive = "1"